welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:2: error: not found: value Maths
	if (Maths.abs(num%10)<=2) return true
            ^