welcome.lessons.welcome.bat.bool2.NearTen.scala.code
def nearTen(num:Int):Boolean = {
	if (Maths.abs(num%10)<=2) return true
	return false
}